--- a/Styles/gamestore.css
+++ b/Styles/gamestore.css
@@ -39,6 +39,9 @@ header{
    display: flex;
    align-items: center;
 }
+.logo img{
+    max-width: 65%;
+}
 
 .HEADER{
    background-color:rgb(7, 1, 20);
@@ -230,7 +233,11 @@ header{
         font-weight: 700;
     }
     
-
+    @media screen and (max-width: 768px) {
+        .row {
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        }
+    }
 .container{
     max-width: 1200px;
     margin:auto;
@@ -342,9 +349,11 @@ ul{
 }	
 }
 .subscribe-container {
-    display: flex;
+    display: grid;
+    grid-template-columns: auto auto; /* Two columns: Input & Button */
+    gap: 10px; /* Space between input and button */
+    justify-content: center; /* Center content horizontally */
     align-items: center;
-    flex-wrap: wrap; /* Allow items to wrap on smaller screens */
 }
 
 .text-box {
@@ -376,9 +385,17 @@ ul{
 
 /* Media Queries for Mobile Responsiveness */
 @media (max-width: 768px) {
+    .subscribe-container {
+        flex-direction: column; /* Stack input and button */
+        gap: 5px;
+    }
     .text-box {
         width: 100%; /* Full width on smaller screens */
       
+    }
+    hr {
+        margin: 20px 0;
+        border: 0.5px solid #ccc;
     }
 
     .subscribe-button {
@@ -388,6 +405,11 @@ ul{
 
     .footer-col1 {
         padding-left: 5%; /* Reduce padding on smaller screens */
+    }
+    .font3 {
+        text-align: center;
+        font-size: 14px;
+        padding-bottom: 10px;
     }
 }
 
