--- a/Styles/acc.css
+++ b/Styles/acc.css
@@ -45,6 +45,9 @@ header{
    display: flex;
    align-items: center;
 }
+.logo img{
+    max-width: 65%;
+}
 
 .HEADER{
    background-color:rgb(7, 1, 20);
