--- a/Styles/style.css
+++ b/Styles/style.css
@@ -28,7 +28,9 @@ header{
     display: flex;
     align-items: center;
 }
-
+.logo img{
+    max-width: 65%;
+}
 .HEADER{
     background-color:rgb(7, 1, 20);
     font-weight: bold;
