--- a/Styles/style.css
+++ b/Styles/style.css
@@ -490,9 +490,17 @@ ul{
 
 /* Media Queries for Mobile Responsiveness */
 @media (max-width: 768px) {
+    .subscribe-container {
+        flex-direction: column; /* Stack input and button */
+        gap: 5px;
+    }
     .text-box {
         width: 100%; /* Full width on smaller screens */
       
+    }
+    hr {
+        margin: 20px 0;
+        border: 0.5px solid #ccc;
     }
 
     .subscribe-button {
@@ -502,6 +510,11 @@ ul{
 
     .footer-col1 {
         padding-left: 5%; /* Reduce padding on smaller screens */
+    }
+    .font3 {
+        text-align: center;
+        font-size: 14px;
+        padding-bottom: 10px;
     }
 }
 
