--- a/Styles/peripherals.css
+++ b/Styles/peripherals.css
@@ -431,9 +431,11 @@ ul{
 }	
 }
 .subscribe-container {
-    display: flex;
+    display: grid;
+    grid-template-columns: auto auto; /* Two columns: Input & Button */
+    gap: 10px; /* Space between input and button */
+    justify-content: center; /* Center content horizontally */
     align-items: center;
-    flex-wrap: wrap; /* Allow items to wrap on smaller screens */
 }
 
 .text-box {
